Fix Move and Transform tool to work with Pass-Through groups

Pass-through groups are not present in the layers stack, so we changing
them (or theirs children), we should update their parent instead.

BUG:457957